// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Contact Map (Dygraph). 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map (Dygraph)"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <ContactMapComponentClass
      chartLib="dygraph"
      contactColor="#009999"
      couplingColor="#000000"
      data={
        Object {
          "contactMonomer": Array [],
          "couplingScore": Array [],
          "distanceMapMonomer": Array [],
        }
      }
      onMouseEnter={[Function]}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Contact Map (HighChart). 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map (HighChart)"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <ContactMapComponentClass
      chartLib="highchart"
      contactColor="#009999"
      couplingColor="#000000"
      data={
        Object {
          "contactMonomer": Array [],
          "couplingScore": Array [],
          "distanceMapMonomer": Array [],
        }
      }
      onMouseEnter={[Function]}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Contact Map (Plotly). 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map (Plotly)"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <ContactMapComponentClass
      chartLib="plotly"
      contactColor="#009999"
      couplingColor="#000000"
      data={
        Object {
          "contactMonomer": Array [],
          "couplingScore": Array [],
          "distanceMapMonomer": Array [],
        }
      }
      onMouseEnter={[Function]}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Contact Map (Rechart). 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map (Rechart)"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <ContactMapComponentClass
      chartLib="rechart"
      contactColor="#009999"
      couplingColor="#000000"
      data={
        Object {
          "contactMonomer": Array [],
          "couplingScore": Array [],
          "distanceMapMonomer": Array [],
        }
      }
      onMouseEnter={[Function]}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Contact Map. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <ContactMapComponentClass
      chartLib="rechart"
      contactColor="#009999"
      couplingColor="#000000"
      data={
        Object {
          "contactMonomer": Array [],
          "couplingScore": Array [],
          "distanceMapMonomer": Array [],
        }
      }
      onMouseEnter={[Function]}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of NGL. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="NGL"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <NGLComponent
      onHoverPickCallback={[Function]}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of Spring. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Spring"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <SpringComponentClass
      canvasBackgroundColor={13421772}
      data={
        Object {
          "links": Array [],
          "nodes": Array [],
        }
      }
      height={450}
      selectedCategory=""
      width={450}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given initial viz of T-SNE. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <TComponentClass
      data={
        Array [
          Array [
            0,
          ],
          Array [
            0,
          ],
        ]
      }
      height={450}
      width={450}
    />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given no initial visualization. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <TComponentClass
      data={
        Array [
          Array [
            0,
          ],
          Array [
            0,
          ],
        ]
      }
      height={450}
      width={450}
    />
  </Card>
</div>
`;
